--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,7 @@ ft_tolower.c ft_toupper.c ft_strlcpy.c ft_strlcat.c ft_atoi.c \
 ft_strnstr.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
 ft_strtrim.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_itoa.c \
 ft_putnbr_fd.c ft_strmapi.c ft_strncmp.c ft_split.c ft_striteri.c \
-ft_lstsize.c ft_lstnew.c ft_lstmap.c ft_lstlast.c ft_lstiter.c \
+ft_lstclear.c ft_lstsize.c ft_lstnew.c ft_lstmap.c ft_lstlast.c ft_lstiter.c \
 ft_lstdelone.c ft_lstadd_front.c ft_lstadd_back.c get_next_line.c
 
 OBJ := $(CFILES:%.c=%.o)
